Release history for CPAN-Meta-Prereqs-Diff

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

0.001001 2014-08-09T00:44:44Z
 [00 Bugfix]
 - Use newer version of CPAN::Meta::Requirements to avoid test failures.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - configure: ↓1
 - develop: (suggests: ↑2)
 - runtime: +1 ↑1
 - test: +1 -2 (recommends: ↑1 -1)

 [Misc]
 - Update Test::ReportVersions
 - Move repository to kentnl org

0.001000 2014-06-19T09:16:18Z
 - First version.
