@@ -11,59 +11,6 @@ our $VERSION = '0.001002';
 
 # AUTHORITY
 
-=head1 SYNOPSIS
-
-  use CPAN::Meta::Prereqs::Diff;
-
-
-  my $diff = CPAN::Meta::Diff->new(
-    new_prereqs => CPAN::Meta->load_file('Dist-Foo-1.01/META.json')->effective_prereqs
-    old_prereqs => CPAN::Meta->load_file('Dist-Foo-1.00/META.json')->effective_prereqs
-  );
-  my @changes = $diff->diff(
-    phases => [qw( runtime build configure test )],
-    types  => [qw( requires suggests configures conflicts )],
-  );
-
-  ## Here, the examples with printf are not needed because ->describe exists
-  ## But they're there any way for example reasons.
-
-  for my $dep (@prereqs) {
-    if ( $dep->is_addition ) {
-      # runtime.requires: + Foo::Bar 0.4
-      printf "%s.%s : + %s %s",
-        $dep->phase, $dep->type, $dep->module, $dep->requirement;
-      next;
-    }
-    if ( $dep->is_removal ) {
-      # runtime.requires: - Foo::Bar 0.4
-      printf "%s.%s : - %s %s",
-        $dep->phase, $dep->type, $dep->module, $dep->requirement;
-      next;
-    }
-    if ( $dep->is_change ) {
-      if ( $dep->is_upgrade ) {
-        # runtime.requires: ↑ Foo::Bar 0.4 → 0.5
-        printf "%s.%s : \x{2191} %s \x{2192} %s",
-          $dep->phase, $dep->type, $dep->module, $dep->old_requirement, $dep->new_requirement;
-        next;
-      }
-      if ( $dep->is_downgrade ) {
-        # runtime.requires: ↓ Foo::Bar 0.5 → 0.4
-        printf "%s.%s : \x{2193} %s %s \x{2192} %s",
-          $dep->phase, $dep->type, $dep->module, $dep->old_requirement, $dep->new_requirement;
-        next;
-      }
-      # changes that can't be easily determined upgrades or downgrades
-      # runtime.requires: ~ Foo::Bar >=0.5, <=0.7 → >=0.4, <=0.8
-      printf "%s.%s : ~ %s %s \x{2192} %s",
-        $dep->phase, $dep->type, $dep->module, $dep->old_requirement, $dep->new_requirement;
-      next;
-    }
-  }
-
-=cut
-
 use Moo 1.000008 qw( has );
 use List::MoreUtils qw( uniq );
 use Scalar::Util qw( blessed );
@@ -275,3 +222,56 @@ sub diff {
 no Moo;
 
 1;
+
+=head1 SYNOPSIS
+
+  use CPAN::Meta::Prereqs::Diff;
+
+
+  my $diff = CPAN::Meta::Diff->new(
+    new_prereqs => CPAN::Meta->load_file('Dist-Foo-1.01/META.json')->effective_prereqs
+    old_prereqs => CPAN::Meta->load_file('Dist-Foo-1.00/META.json')->effective_prereqs
+  );
+  my @changes = $diff->diff(
+    phases => [qw( runtime build configure test )],
+    types  => [qw( requires suggests configures conflicts )],
+  );
+
+  ## Here, the examples with printf are not needed because ->describe exists
+  ## But they're there any way for example reasons.
+
+  for my $dep (@prereqs) {
+    if ( $dep->is_addition ) {
+      # runtime.requires: + Foo::Bar 0.4
+      printf "%s.%s : + %s %s",
+        $dep->phase, $dep->type, $dep->module, $dep->requirement;
+      next;
+    }
+    if ( $dep->is_removal ) {
+      # runtime.requires: - Foo::Bar 0.4
+      printf "%s.%s : - %s %s",
+        $dep->phase, $dep->type, $dep->module, $dep->requirement;
+      next;
+    }
+    if ( $dep->is_change ) {
+      if ( $dep->is_upgrade ) {
+        # runtime.requires: ↑ Foo::Bar 0.4 → 0.5
+        printf "%s.%s : \x{2191} %s \x{2192} %s",
+          $dep->phase, $dep->type, $dep->module, $dep->old_requirement, $dep->new_requirement;
+        next;
+      }
+      if ( $dep->is_downgrade ) {
+        # runtime.requires: ↓ Foo::Bar 0.5 → 0.4
+        printf "%s.%s : \x{2193} %s %s \x{2192} %s",
+          $dep->phase, $dep->type, $dep->module, $dep->old_requirement, $dep->new_requirement;
+        next;
+      }
+      # changes that can't be easily determined upgrades or downgrades
+      # runtime.requires: ~ Foo::Bar >=0.5, <=0.7 → >=0.4, <=0.8
+      printf "%s.%s : ~ %s %s \x{2192} %s",
+        $dep->phase, $dep->type, $dep->module, $dep->old_requirement, $dep->new_requirement;
+      next;
+    }
+  }
+
+=cut
