@@ -1,9 +1,16 @@
 Release history for CPAN-Meta-Prereqs-Diff
 
 {{$NEXT}}
+ [00 Trivial]
+ - no code changes.
+ - adjust whitespace.
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001001, see misc/*.deps* for details
  - develop: +1 (suggests: ↑1)
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
 
 0.001001 2014-08-09T00:44:44Z
  [00 Bugfix]
